# arbitrage_watcher

./: Cargo.toml  README.md
.github/workflows/: unit_tests.yml
data/: addresses.csv
src/: data.rs  errs.rs  lib.rs  main.rs
src/eth/: gas.rs  mod.rs  prices.rs
