cargo-features = ["edition2024"]

[package]
name = "chainx"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "e22d9be", features = [
    "contract",
    "network",
    "node-bindings",
    "providers",
    "provider-http",
    "provider-ipc",
    "provider-ws",
    "rpc-client",
    "rpc-client-ipc",
    "rpc-client-ws",
    "rpc-types-eth",
    "rpc-types-trace",
] }
reth = { git = "https://github.com/paradigmxyz/reth.git" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
eyre = "0.6"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
csv = "1.3"
comfy-table = "7.1"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.117"
